--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 # Use wildcard "*" to expose all endpoints
 # Can also expose individual endpoints with a comma-delimited list
-#  , beans,thread dump, mappings
+#  health, info, mappings, beans,thread dump, mappings
 
-management.endpoints.web.exposure.include = health, info
+management.endpoints.web.exposure.include = *
 management.info.env.enabled = true
+
+# Exclude individual endpoints with a comma-delimited
+# management.endpoints.web.exposure.exclude = health, info, mappings
 
 info.app.name = My Super Cool App
 info.app.description = A crazy fun app, yoohoo!
