--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,11 @@ team.name= The Mouse Club
 #
 # Change Spring Boot embedded server port
 #
-server.port = 7070
+# server.port = 7070
 
 #
 # Set the context path of the application
 #
 # All requests should be prefixed with /mycoolapp
 #
-server.servlet.context-path = /mycoolapp
+# server.servlet.context-path = /mycoolapp
