Lazy Initialization: each class and global configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ team.name= The Mouse Club
 # All requests should be prefixed with /mycoolapp
 #
 # server.servlet.context-path = /mycoolapp
+
+spring.main.lazy-initialization=true
