testing default bean scope

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ team.name= The Mouse Club
 #
 # server.servlet.context-path = /mycoolapp
 
-spring.main.lazy-initialization=true
+# spring.main.lazy-initialization=true
