--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,13 @@ team.name= The Mouse Club
 # server.servlet.context-path = /mycoolapp
 
 # spring.main.lazy-initialization=true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username = springstudent
+spring.datasource.password = springstudent
+
+# Turn off the Spring Boot banner
+spring.main.banner-mode = off
+
+# Reduce logging level. Set logging level to warn
+logging.level.root = warn
