send mail with smtp and sendgrid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ team.name= The Mouse Club
 #
 # Change Spring Boot embedded server port
 #
-# server.port = 7070
+ server.port = 8082
 
 #
 # Set the context path of the application
@@ -49,3 +49,5 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # Configure JPA/Hibernate to auto create the tables
 # the "update" config will keep existing data in the table
 spring.jpa.hibernate.ddl-auto=update
+
+sendgrid.api-key=YOUR_SENDGRID_API_KEY
